# KaggleLeashBio

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_local.txt  requirements_slurm.txt
.devcontainer/: devcontainer.json
notebooks/: 000_0_ensemble.ipynb  000_0_ensemble_optuna.ipynb  000_1_clean_bb1_capping_metal.ipynb  000_1_clean_bb1_keepsteleo.ipynb  000_1_eda.ipynb  000_2_calc_RDkitDescriptor.ipynb  000_3_make_df.ipynb  000_3_make_df_capping_structure.ipynb  000_3_make_df_cleaned_structure.ipynb  000_3_make_df_main_scaffold.ipynb  000_3_make_df_new.ipynb  000_4_calc_similarity.ipynb  000_4_chack_share_nonshare.ipynb  000_4_make_df_new.ipynb  000_baseline.ipynb  000_check_all0_bb.ipynb  000_eda_show_molecule.ipynb  000_soft_labeling_check_data.ipynb  000_target_correration.ipynb  001_baseline.ipynb  002_baseline_lightning.ipynb  003_embedding_perbb.ipynb  004_archtechture_branch_prebb.ipynb  005_modify004-Copy1.ipynb  005_modify004.ipynb  005_modify004_all.ipynb  006_focal_loss.ipynb  007_chemBERTa.ipynb  008_sample_weight_001.ipynb  009_aug_schaffold_feautures.ipynb  009_scaffold_features.ipynb  010_aug_changebb23.ipynb  011_onlyFC_embedding.ipynb  012_onlyFC_embedding_more_params.ipynb  013_scaffold_features_and_aug.ipynb  014_GRU.ipynb  015_rdkit_and_fingerprint.ipynb  016_mordred_and_ECFP4.ipynb  017_rdkit_and_rdkitFP4.ipynb  018_rdkit_and_avalonFP.ipynb  (+70 more)
notebooks/funcs/: calc_descriptor.py  chemical_func.py  tokenize.py  utils.py
set_env/: requirements.txt  set_env.sh
(+3 files in other folders)
