[tool.poetry]
authors = ["Yasuhiro Tsuji <yasuhiro.tsuji@rist.co.jp>"]
description = ""

# プロジェクト名を設定してください。例: "myawesomeproject"
name = "deepanalyticstemplate"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
japanize-matplotlib = "^1.1.3"
jupyter = "^1.0.0"
lightgbm = "^4.1.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
plotly = "5.17.0"
python = ">=3.9,<=3.11"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"
dcekit = "2.13.2"
pyarrow = "^16.1.0"
duckdb = "^0.10.2"
rdkit-pypi = "^2022.9.5"
fastparquet = "^2024.2.0"
tqdm = "^4.66.4"
torch = "^2.3.0"
pytorch-lightning = "^2.2.4"
tokenizers = "^0.19.1"
transformers = "^4.41.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
